# rust2cython

./: .gitignore  Cargo.toml  LICENSE  README.md  requirements.txt
.github/workflows/: ci.yml
examples/bio_sequence/: BUILD.sh  Cargo.toml  README.md  bio_sequence.pxd  bio_sequence.pyx  demo.py  pyproject.toml  setup.py
examples/bio_sequence/src/: lib.rs
examples/linear_algebra/: BUILD.sh  Cargo.toml  README.md  demo.py  linear_algebra.c  linear_algebra.h  linear_algebra.pxd  linear_algebra.pyx  pyproject.toml  setup.py
examples/linear_algebra/bindings/: BUILD.sh  linear_algebra.c  linear_algebra.h  linear_algebra.pxd  linear_algebra.pyx  pyproject.toml  setup.py
examples/linear_algebra/src/: lib.rs  linear_algebra.cp313-win_amd64.pyd  (+1 more)
src/: buildrs_gen.rs  header_gen.rs  header_parser.rs  ir.rs  lib.rs  main.rs  pxd_gen.rs  pyx_gen.rs  setuptools_gen.rs  shim_gen.rs  shim_planner.rs  syn_parser.rs  translator.rs
tests/: snapshot_tests.rs
tests/fixtures/: complex.rs  simple.rs  strings.rs  structs.rs
tests/snapshots/: BUILD.sh  complex.pxd  complex.pyx  pyproject.toml  setup.py  simple.pxd.snap  simple.pyx  snapshot_tests__complex_h.snap  snapshot_tests__complex_pxd.snap  snapshot_tests__complex_pyx.snap  snapshot_tests__simple_h.snap  snapshot_tests__simple_pxd.snap  snapshot_tests__simple_pyx.snap  snapshot_tests__strings_h.snap  snapshot_tests__strings_pxd.snap  snapshot_tests__strings_pyx.snap  snapshot_tests__structs_h.snap  snapshot_tests__structs_pxd.snap  snapshot_tests__structs_pyx.snap  strings.pxd.snap  strings.pyx  structs.pxd  structs.pyx
